feat(select-input): Added select input
