# libs/lotchen-api/identity-provider/src/users/get-all/get-all-user-query-handler.ts
@@ -1,20 +1,36 @@
 import { RequestHandler } from '@lotchen/api/core';
 import { GetAllUserQuery } from './get-all-user-query';
 import { Inject, Injectable } from '@nestjs/common';
-import { User } from '../user.schema';
+import { UserDocument } from '../user.schema';
 import { Model } from 'mongoose';
+import { ProfileDocument } from '../../profile';
 
 @Injectable()
 export class GetAllUserQueryHandler
   implements RequestHandler<null, GetAllUserQuery[]>
 {
-  constructor(@Inject('USER_MODEL') private readonly userModel: Model<User>) {}
+  constructor(
+    @Inject('USER_MODEL') private readonly userModel: Model<UserDocument>,
+    @Inject('PROFILE_MODEL')
+    private readonly profileModel: Model<ProfileDocument>
+  ) {}
 
   public async handlerAsync(): Promise<GetAllUserQuery[]> {
-    const data = await this.userModel.find({}, 'id email').lean().exec();
+    const profiles = await this.profileModel
+      .find({}, 'contactInfo firstName lastName createdAt updatedAt user')
+      .populate('user', '_id')
+      .lean()
+      .exec();
 
-    return data.map((item) => {
-      return { id: item._id, email: item.email } as GetAllUserQuery;
+    return profiles.map((item) => {
+      return {
+        userId: item.user._id,
+        email: item.contactInfo.email,
+        firstName: item.firstName,
+        lastName: item.lastName,
+        createdAt: item.createdAt,
+        updatedAt: item.updatedAt,
+      } as GetAllUserQuery;
     });
   }
 }
