# libs/lotchen-api/identity-provider/src/users/get-all/get-all-user-query.ts
@@ -2,8 +2,20 @@ import { ApiProperty } from '@nestjs/swagger';
 
 export class GetAllUserQuery {
   @ApiProperty()
-  id!: string;
+  userId!: string;
 
   @ApiProperty({ description: 'User email ' })
   email!: string;
+
+  @ApiProperty({ type: String })
+  firstName!: string;
+
+  @ApiProperty({ type: String })
+  lastName!: string;
+
+  @ApiProperty({ type: Date })
+  createdAt!: Date;
+
+  @ApiProperty({ type: Date })
+  updatedAt!: Date;
 }
